# segment

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/include/: FileSystemUtilities.hpp  HttpDownloader.hpp  QuranImagePage.hpp  QuranImageProvider.hpp  QuranMetaData.hpp
application/source/: FileSystemUtilities.cpp  HttpDownloader.cpp  QuranImagePage.cpp  QuranImageProvider.cpp
cmake/: build_external.cmake
segment/: CMakeLists.txt  main.cpp
